# FUDA_HGEMM

./: .gitignore  CMakeLists.txt  README.md
cuda/mma/: mma.cu
cuda/native/: hgemm.cu  hgemm_async.cu
cuda/wmma/: wmma.cu
test/: test_debug.cu  test_hgemm.cu  test_hgemm_async.cu
utils/: test_utils.h
